# lol-data

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  main.py  makefile  package-lock.json  package.json  requirements.txt  server.js  test.sh
.github/workflows/: python-app.yml
backend/: Cargo.toml  Dockerfile  makefile  requirements.txt
backend/resources/python/: general.cfg
backend/src/apis/: get_script_status.rs  get_team_data.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/apis/: get_league_users.rs
public/: manifest.json
resources/js/: data.js
resources/python/: assert_db.py  data-base-setup.py  get_champ_card_data.py  get_champion_data.py  loldata.py  perk_table_setup.py  remove_last_data.py  test.py  update_db_from_api.py  update_static_data.py
resources/python/apis/: get_match_data.py  get_team_data.py  get_user_data.py
resources/python/classes/: .lolaccount.py.swp  .lolparser.py.swp  lolaccount.py  lolconfig.py  loldb.py  lolgather.py  lollogger.py  lolparser.py  models.py
resources/python/scripts/: champ_table_setup.py  correct_notfound_items.py  data-base-setup-v2.py  data-base-setup.py  data_base_setup_v2.py  db_import.py  db_import_v2.py  get_champion_data.py  (+9 more)
src/: App.css  App.js  get_team_data.rs  index.js  main.rs
src/apis/: get_champ_card_data.rs  get_champions.rs  get_items.rs  get_json_data.rs  get_script_runs.rs  get_team_data.rs  get_user_data.rs  update_data.rs
src/components/: Dashboard.js  Filter.js  MyTable.js  NavBar.js  TeamDashboard.js
views/: data.pug
(+35 files in other folders)
