[package]
name = "rust"
version = "0.1.0"
authors = ["Paul <spaynkee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "18.2.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7"
rustc-serialize = "0.3"
